--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "barryvdh/laravel-ide-helper": "^2.4",
         "caouecs/laravel-lang": "^3.0",
         "doctrine/dbal": "^2.8",
+        "encore/laravel-admin": "^1.5",
         "fideloper/proxy": "^4.0",
+        "jenssegers/date": "^3.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "spatie/laravel-permission": "^2.12"
