--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=12d41bdd44aa0f5f634d",
+    "/css/app.css": "/css/app.css?id=737ac146387f9af2575d"
 }
