mv js to backend module

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js?id=12d41bdd44aa0f5f634d",
-    "/css/app.css": "/css/app.css?id=737ac146387f9af2575d"
+    "/css/app.css": "/css/app.css?id=737ac146387f9af2575d",
+    "/js/backend.js": "/js/backend.js?id=d8ad665298bc117dd89a",
+    "/css/backend.css": "/css/backend.css?id=737ac146387f9af2575d"
 }
