--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "handlebars-loader": "^1.6.0",
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
+    "i18next": "^11.10.1",
     "immutable": "^3.8.2",
     "jsx-loader": "^0.13.2",
     "moment": "^2.22.1",
