--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "jenssegers/date": "^3.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "mcamara/laravel-localization": "^1.3",
         "nwidart/laravel-modules": "^3.3",
         "spatie/laravel-permission": "^2.12"
     },
