--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^1.0",
         "mcamara/laravel-localization": "^1.3",
         "nwidart/laravel-modules": "^3.3",
-        "spatie/laravel-permission": "^2.12"
+        "spatie/laravel-permission": "^2.12",
+        "yajra/laravel-datatables": "^1.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
